# wagtail-test

./: pyproject.toml
template/: Dockerfile  manage.py
template/blog/: models.py
template/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_blogpagetag_blogpage_tags.py  0005_blogtagindexpage.py  0006_blogcategory.py  0007_blogpage_categories.py
template/blog/templates/blog/: blog_page.html
template/home/migrations/: 0003_homepage_body.py
template/template/: wsgi.py
template/template/settings/: base.py  dev.py
template/template/templates/: base.html
